Tweaks FAQ formatting. Fixes z-index issue with header and plus signs in FAQ.

--- a/app/styles/faq.scss
+++ b/app/styles/faq.scss
@@ -23,6 +23,7 @@ header {
   width: 100%;
   top: 0;
   background: white;
+  z-index: 1;
 }
 
 [role="main"],
